Topbaren refererer til eksempler og refererer til samme CSS fil istedenfor kopi slik at vi slipper dobbelt arbeid

--- a/Nettside/WebContent/WebEksempler/HtmlIntroduksjon.html
+++ b/Nettside/WebContent/WebEksempler/HtmlIntroduksjon.html
@@ -3,15 +3,14 @@
 <head lang="nb">
 <meta charset="utf-8">
 <title>Html Introduksjon</title>
-<link rel="stylesheet" href="JavaCodeStyle.css">
+<link rel="stylesheet" href="../JavaEksempler/JavaCodeStyle.css">
 </head>
 <body>
 	<div class="menu">
   		<div class="menu_element"><a href="../om_oss.html">Forsiden</a></div>
-  		<div class="menu_element"><a href="../Anja.html">Anja</a></div>
-  		<div class="menu_element"><a href="../Espen.html">Espen</a></div>
-  		<div class="menu_element"><a href="../Erlend.html">Erlend</a></div>
-  		<div class="menu_element"><a href="../JanErik.html">Jan Erik</a></div>
+  		<div class="menu_element"><a href="JavaForside.html">Alle Javaeksempler</a></div>
+  		<div class="menu_element"><a href="../WebEksempler/WebForside.html">Alle Webeksempler</a></div>
+  		<div class="menu_element"><a href="../ProsjektBeskrivelse.html">Om Prosjektet</a></div>
 	</div>
 	<div class=container>
 	<h1> Introduksjon </h1>
@@ -35,18 +34,18 @@
 	   </ul>
 	   <h3> Eksempel på ett html dokument: </h3>
 	<div class=code><pre>
-  &lt;!DOCTYPE html&gt;
-     &lt;html&gt;
-      &lt;head&gt;
-       &lt;title&gt; Side Titel &lt;title&gt;
-        &lt;/head&gt;
-        &lt;body&gt;
+&lt;!DOCTYPE html&gt;
+   &lt;html&gt;
+    &lt;head&gt;
+     &lt;title&gt; Side Titel &lt;title&gt;
+      &lt;/head&gt;
+      &lt;body&gt;
 
-        &lt;h1&gt; Min første Overskrift &lt;/h1&gt;
-        &lt;p&gt;Min første Paragraf &lt;/p&gt;
+      &lt;h1&gt; Min første Overskrift &lt;/h1&gt;
+      &lt;p&gt;Min første Paragraf &lt;/p&gt;
 
-         &lt;/body&gt;
-          &lt;/html&gt;</pre> 
+       &lt;/body&gt;
+        &lt;/html&gt;</pre> 
    </div>
    <p> Det er to elementer i ett HTML dokument du kan bruke for å visualisere tekst på nettsiden. <br>
        Vi har Paragraf elementet &lt;p&gt; denne brukes til å skrive simpel tekst på nettsiden, <br>
