--- a/Nettside/WebContent/WebEksempler/Styling.html
+++ b/Nettside/WebContent/WebEksempler/Styling.html
@@ -3,15 +3,14 @@
 <head lang="nb">
 <meta charset="utf-8">
 <title>Styling til nettsiden</title>
-<link rel="stylesheet" href="JavaCodeStyle.css">
+<link rel="stylesheet" href="../JavaEksempler/JavaCodeStyle.css">
 </head>
 <body>
 	<div class="menu">
   		<div class="menu_element"><a href="../om_oss.html">Forsiden</a></div>
-  		<div class="menu_element"><a href="../Anja.html">Anja</a></div>
-  		<div class="menu_element"><a href="../Espen.html">Espen</a></div>
-  		<div class="menu_element"><a href="../Erlend.html">Erlend</a></div>
-  		<div class="menu_element"><a href="../JanErik.html">Jan Erik</a></div>
+  		<div class="menu_element"><a href="JavaForside.html">Alle Javaeksempler</a></div>
+  		<div class="menu_element"><a href="../WebEksempler/WebForside.html">Alle Webeksempler</a></div>
+  		<div class="menu_element"><a href="../ProsjektBeskrivelse.html">Om Prosjektet</a></div>
 	</div>
 	<div class=container>
 	<h1> HTML Styling </h1>
