La til eksempel for abstrakte klasser

--- a/Nettside/WebContent/JavaEksempler/JavaForside.html
+++ b/Nettside/WebContent/JavaEksempler/JavaForside.html
@@ -29,6 +29,7 @@
 			<div class="example_square"><a href="Flerdimensjonelle_Tabeller.html">Flerdimensjonelle Tabeller</a></div>
 			<div class="example_square"><a href="Kalender.html">Filer</a></div>
 			<div class="example_square"><a href="FeilHandtering.html">Feilhåndtering</a></div>
+			<div class="example_square"><a href="AbstrakteKlasser.html">AbstrakteKlasser</a></div>
 		</div>
 	</div>
 </body>
