La til knapp for <a>

--- a/Nettside/WebContent/JanErik.html
+++ b/Nettside/WebContent/JanErik.html
@@ -100,7 +100,7 @@
 			Java har også et større bruksområde enn ActionScript, som gir mange muligheter.<br>
 			Jeg er ny når det kommer til CSS, og jeg synes det ser veldig spennende og elegant ut.</p>
 		</div>
-		<div class="download"><a href="#DOWNLOAD">Last ned</a></div>
+		<div class="download"><a href="JanErik.html" download="">Last ned</a></div>
 	</div>
 </body>
 </html>
