Downloadknapp er i en fikset posisjon og prosjektbeskrivelsen er smalere(73%)

--- a/Nettside/WebContent/ProsjektBeskrivelse.html
+++ b/Nettside/WebContent/ProsjektBeskrivelse.html
@@ -17,7 +17,7 @@
 	<div class="container_gruppebilde">
 		<h1>Prosjektbeskrivelse</h1>
 		
-		<div class="text_field">
+		<div class="text_field" id="prosjektbeskrivelse">
 		<p>Vi utvikler en norskspråklig nettside om programmering med kodeeksempler fra de programmeringsspråkene og markeringsspråk (markup languages) som er vårt hovedfokus.<br><br>
 			Vi skal fokusere mest på Java og webteknologi (HTML, CSS og noe JavaScript). Den skal også inneholde en ressurssamling med beskrivelser av og lenker til andre nyttige ressurser for personer som vil begynne å lære seg programmering.<br><br>
 			Nettsiden er beregnet for studenter i begynneremner i programmering på høyskole og universitet, og andre som ønsker å lære seg programmering i Java, eller av andre grunner vil ha en webressurs for grunnleggende programmering.<br><br>
@@ -44,8 +44,8 @@
 			Det innebærer at nettsiden har potensiale for videreutvikling i form av fremtidige prosjekter for å lage ytterligere innhold som utvider nettsiden til også å omhandle programmering på høyere nivå, eller utvide med flere programmeringsspråk.<br> 
 			Oversettelse av nettsiden til andre språk, i tillegg til muligheter for videreutvikling nevnt i avsnittet om finansiering/lønnsomhet er andre muligheter for å utvide produktet i fremtidige prosjekter ved en senere anledning.<br><br>
 		</p>
-		<div class="download"><a href="Prosjektide.pdf" download=""> Beskrivelse av prosjektideen </a></div>
 		</div>
+		<div class="download"><a href="Prosjektide.pdf" download=""> Beskrivelse av prosjektideen </a></div>
 	</div>
 </body>
 </html>
