--- a/Nettside/WebContent/ProsjektBeskrivelse.html
+++ b/Nettside/WebContent/ProsjektBeskrivelse.html
@@ -46,6 +46,7 @@
 		</p>
 		</div>
 		<div class="download"><a href="Prosjektide.pdf" download=""> Beskrivelse av prosjektideen </a></div>
+		<div class="download" id="sluttrapport_btn"><a href="SLUTTRAPORT PLASSHOLDER" download=""> Sluttrapporten </a></div>
 	</div>
 </body>
 </html>
