--- a/Nettside/WebContent/JanErik.html
+++ b/Nettside/WebContent/JanErik.html
@@ -19,7 +19,7 @@
 	<div class="container" id="container">
 		
 		<img src="Janerik.jpeg" width=250 height=300 alt="Jan Erik">
-	
+		<h1>Jan Erik</h1>
 		<h2 id="title">Erfaring i programmering:</h2>
 		<noscript><table class="experienceTable">
  			<tr>
@@ -85,8 +85,7 @@
 		
 		<div class="paragrafer" id="paragrafer">
 			<strong>Opplevelse med språkene:</strong>
-			<p>ActionScript var det første programmeringsspråket jeg lærte.<br>
-			Det er begrenset, lukket, og fremfor alt utdatert, men det lot deg gjøre en del ting som kunne være spennende.<br>
+			<p>ActionScript var det første programmeringsspråket jeg lærte.<br>Det er begrenset, lukket, og fremfor alt utdatert, men det lot deg gjøre en del ting som kunne være spennende.<br>
 			Her er noen eksempler på noen ting jeg likte med ActionScript:</p>
 				<ul>	
 					<li><p>Det er kjapt og enkelt å lage et vindu</p></li>
