Lagt til nedlastbar fil på prosjektrapport knapp

--- a/Nettside/WebContent/ProsjektBeskrivelse.html
+++ b/Nettside/WebContent/ProsjektBeskrivelse.html
@@ -46,7 +46,7 @@
 		</p>
 		</div>
 		<div class="download"><a href="Prosjektide.pdf" download=""> Beskrivelse av prosjektideen </a></div>
-		<div class="download" id="sluttrapport_btn"><a href="SLUTTRAPORT PLASSHOLDER" download=""> Sluttrapporten </a></div>
+		<div class="download" id="sluttrapport_btn"><a href="Prosjektrapport_foreløpig.pdf" download=""> Sluttrapporten </a></div>
 	</div>
 </body>
 </html>
