lagt til bilde på prosjektside

--- a/Nettside/WebContent/ProsjektBeskrivelse.html
+++ b/Nettside/WebContent/ProsjektBeskrivelse.html
@@ -14,6 +14,10 @@
   		<div class="menu_element"><a href="Erlend.html">Erlend</a></div>
   		<div class="menu_element"><a href="JanErik.html">Jan Erik</a></div>
 	</div>
+	<div class="container" id="container">
+		
+		<img src="java_bilde.jpg" width=250 height=300 alt="Java">
+		</div>
 	<div class="container_gruppebilde">
 		<h1>Prosjektbeskrivelse</h1>
 		
