Endret bildeskalering på bildet på prosjektbeskrivelsesiden

--- a/Nettside/WebContent/ProsjektBeskrivelse.html
+++ b/Nettside/WebContent/ProsjektBeskrivelse.html
@@ -16,7 +16,7 @@
 	</div>
 	<div class="container" id="container">
 		
-		<img src="java_bilde.jpg" width=250 height=300 alt="Java">
+		<img src="java_bilde.jpg" width=250 alt="Java">
 		</div>
 	<div class="container_gruppebilde">
 		<h1>Prosjektbeskrivelse</h1>
